arm-templates/kubernetes-the-hard-way.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "personalIP": {
            "type": "string"
        },
        "publicSSHKeyData": {
            "type": "string"
        }
    },
    "functions": [],
    "variables": {},
    "resources": [{
        "name": "kubernetes-the-hard-way",
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "addressSpace": {
                "addressPrefixes": [
                    "10.240.0.0/24"
                ]
            },
            "subnets": [
                {
                    "name": "kubernetes",
                    "properties": {
                        "addressPrefix": "10.240.0.0/24",
                        "networkSecurityGroup": {
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'kubernetes-nsg')]"
                        },
                        "routeTable": {
                            "id": "[resourceId('Microsoft.Network/routeTables', 'pod-routes')]"
                        }
                    }
                }
            ]
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', 'kubernetes-nsg')]",
            "[resourceId('Microsoft.Network/routeTables', 'pod-routes')]"
        ]
    },
    {
        "name": "pod-routes",
        "type": "Microsoft.Network/routeTables",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "copy": [
                {
                    "name": "routes",
                    "count": 3,
                    "input": {
                        "name": "[concat('node-', copyIndex('routes'))]",
                        "properties": {
                            "addressPrefix": "[concat('10.200.', copyIndex('routes'), '.0/24')]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[concat('10.240.0.2', copyIndex('routes'))]"
                        }
                    }
                }
            ],
            "disableBgpRoutePropagation": true
        }
    },
    {
        "name": "kubernetes-nsg",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [
                {
                    "name": "allow-ssh-from-personal-ip",
                    "properties": {
                        "protocol": "tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "22",
                        "sourceAddressPrefix": "[parameters('personalIP')]",
                        "destinationAddressPrefix": "10.240.0.0/24",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "allow-https-from-personal-ip",
                    "properties": {
                        "protocol": "tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "6443",
                        "sourceAddressPrefix": "[parameters('personalIP')]",
                        "destinationAddressPrefix": "10.240.0.0/24",
                        "access": "Allow",
                        "priority": 101,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "allow-icmp-from-personal-ip",
                    "properties": {
                        "protocol": "icmp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "*",
                        "sourceAddressPrefix": "[parameters('personalIP')]",
                        "destinationAddressPrefix": "10.240.0.0/24",
                        "access": "Allow",
                        "priority": 102,
                        "direction": "Inbound"
                    }
                }
            ]
        }
    },
    {
        "name": "[concat('kubernetes-nsg/allow-worker-', copyIndex(), '-to-kube-api')]",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "apiVersion": "2020-11-01",
        "properties": {
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "6443",
            "sourceAddressPrefix": "[reference(resourceId('Microsoft.Network/publicIPAddresses', concat('worker-public-ip-', copyIndex()))).ipAddress]",
            "destinationAddressPrefix": "10.240.0.0/24",
            "access": "Allow",
            "priority": "[concat(20, copyIndex())]",
            "direction": "Inbound"
        },
        "copy": {
            "name": "worker-nsg-rule-copy",
            "count": 3
        }
    },
    {
        "name": "kubernetes-the-hard-way",
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "sku": {
            "name": "Standard",
            "tier": "Regional"
        },
        "properties": {
            "publicIPAllocationMethod": "Static"
        }
    },
    {
        "name": "[concat('controller-public-ip-', copyIndex())]",
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "publicIPAllocationMethod": "Dynamic"
        },
        "copy": {
            "name": "controller-public-ip-copy",
            "count": 3
        }
    },
    {
        "name": "[concat('controller-nic-', copyIndex())]",
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2021-08-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "ipConfigurations": [
                {
                    "name": "private",
                    "properties": {
                        "subnet": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'kubernetes-the-hard-way', 'kubernetes')]"
                        },
                        "primary": true,
                        "privateIPAllocationMethod": "Static",
                        "privateIPAddress": "[concat('10.240.0.1', copyIndex())]",
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat('controller-public-ip-', copyIndex()))]"
                        }
                    }
                }
            ]
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/virtualNetworks', 'kubernetes-the-hard-way')]",
            "[resourceId('Microsoft.Network/publicIPAddresses', concat('controller-public-ip-', copyIndex()))]"    
        ],
        "copy": {
            "name": "controller-nic-copy",
            "count": 3
        }
    },
    {
        "type": "Microsoft.Compute/availabilitySets",
        "apiVersion": "2022-11-01",
        "name": "kubernetes-controllers",
        "location": "[resourceGroup().location]",
        "sku": {
            "name": "Aligned"
        },
        "properties": {
            "platformFaultDomainCount": "3",
            "platformUpdateDomainCount": "3"
        }
    },
    {
        "name": "[concat('controller-', copyIndex())]",
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2022-03-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "availabilitySet": {
                "id": "[resourceId('Microsoft.Compute/availabilitySets', 'kubernetes-controllers')]"
            },
            "hardwareProfile": {
                "vmSize": "Standard_B2ms"
            },
            "storageProfile": {
                "osDisk": {
                    "createOption": "fromImage",
                    "managedDisk": {
                        "storageAccountType": "StandardSSD_LRS"
                    },
                    "deleteOption": "Delete"
                },
                "imageReference": {
                    "publisher": "canonical",
                    "offer": "0001-com-ubuntu-server-focal",
                    "sku": "20_04-lts-gen2",
                    "version": "latest"
                }
            },
            "networkProfile": {
                "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces', concat('controller-nic-', copyIndex()))]"
                    }
                ]
            },
            "osProfile": {
                "computerName": "[concat('controller-', copyIndex())]",
                "adminUsername": "azureuser",
                "linuxConfiguration": {
                    "disablePasswordAuthentication": true,
                    "ssh": {
                        "publicKeys": [
                            {
                                "keyData": "[parameters('publicSSHKeyData')]",
                                "path": "/home/azureuser/.ssh/authorized_keys"
                            }
                        ]
                    }
                }
            },
            "diagnosticsProfile": {
                "bootDiagnostics": {
                    "enabled": true
                }
            }
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkInterfaces', concat('controller-nic-', copyIndex()))]",
            "[resourceId('Microsoft.Compute/availabilitySets', 'kubernetes-controllers')]"
        ],
        "copy": {
            "name": "controller-copy",
            "count": 3
        }
    },
    {
        "name": "[concat('worker-public-ip-', copyIndex())]",
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2020-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "publicIPAllocationMethod": "Dynamic"
        },
        "copy": {
            "name": "worker-public-ip-copy",
            "count": 3
        }
    },
    {
        "name": "[concat('worker-nic-', copyIndex())]",
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2021-08-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "ipConfigurations": [
                {
                    "name": "private",
                    "properties": {
                        "subnet": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'kubernetes-the-hard-way', 'kubernetes')]"
                        },
                        "primary": true,
                        "privateIPAllocationMethod": "Static",
                        "privateIPAddress": "[concat('10.240.0.2', copyIndex())]",
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat('worker-public-ip-', copyIndex()))]"
                        }
                    }
                }
            ]
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/virtualNetworks', 'kubernetes-the-hard-way')]",
            "[resourceId('Microsoft.Network/publicIPAddresses', concat('worker-public-ip-', copyIndex()))]"    
        ],
        "copy": {
            "name": "worker-nic-copy",
            "count": 3
        }
    },
    {
        "name": "[concat('worker-', copyIndex())]",
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2022-03-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "hardwareProfile": {
                "vmSize": "Standard_B2ms"
            },
            "storageProfile": {
                "osDisk": {
                    "createOption": "fromImage",
                    "managedDisk": {
                        "storageAccountType": "StandardSSD_LRS"
                    },
                    "deleteOption": "Delete"
                },
                "imageReference": {
                    "publisher": "canonical",
                    "offer": "0001-com-ubuntu-server-focal",
                    "sku": "20_04-lts-gen2",
                    "version": "latest"
                }
            },
            "networkProfile": {
                "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces', concat('worker-nic-', copyIndex()))]"
                    }
                ]
            },
            "osProfile": {
                "computerName": "[concat('worker-', copyIndex())]",
                "adminUsername": "azureuser",
                "linuxConfiguration": {
                    "disablePasswordAuthentication": true,
                    "ssh": {
                        "publicKeys": [
                            {
                                "keyData": "[parameters('publicSSHKeyData')]",
                                "path": "/home/azureuser/.ssh/authorized_keys"
                            }
                        ]
                    }
                }
            },
            "diagnosticsProfile": {
                "bootDiagnostics": {
                    "enabled": true
                }
            }
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkInterfaces', concat('worker-nic-', copyIndex()))]"
        ],
        "copy": {
            "name": "worker-copy",
            "count": 3
        }
    },
    {
        "type": "Microsoft.Network/loadBalancers",
        "apiVersion": "2022-07-01",
        "name": "kubeapi-external",
        "location": "[resourceGroup().location]",
        "sku": {
            "name": "Standard",
            "tier": "Regional"
        },
        "properties": {
            "frontendIPConfigurations": [
                {
                    "name": "kubeapi",
                    "properties": {
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'kubernetes-the-hard-way')]"
                        }
                    }
                }
            ],
            "backendAddressPools": [
                {
                    "name": "controllers"
                }
            ],
            "loadBalancingRules": [
                {
                    "name": "kubeapi",
                    "properties": {
                    "backendAddressPool": {
                        "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'kubeapi-external', 'controllers')]"
                    },
                    "backendPort": "6443",
                    "frontendIPConfiguration": {
                        "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', 'kubeapi-external', 'kubeapi')]"
                    },
                    "frontendPort": "6443",
                    "protocol": "tcp"
                    }
                }
            ],
            "probes": [
                {
                    "name": "kubeapi-healthz",
                    "properties": {
                        "intervalInSeconds": "5",
                        "port": "6443",
                        "protocol": "tcp"
                    }
                }
            ]
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/virtualNetworks', 'kubernetes-the-hard-way')]",
            "[resourceId('Microsoft.Compute/availabilitySets', 'kubernetes-controllers')]",
            "[resourceId('Microsoft.Network/publicIPAddresses', 'kubernetes-the-hard-way')]"
        ]
    },
    {
        "type": "Microsoft.Network/loadBalancers/backendAddressPools",
        "apiVersion": "2020-05-01",
        "name": "kubeapi-external/controllers",
        "location": "[resourceGroup().location]",
        "properties": {
            "copy": [
                {
                    "name": "loadBalancerBackendAddresses",
                    "count": 3,
                    "input": {
                        "name": "[concat('controller-', copyIndex('loadBalancerBackendAddresses'))]",
                        "properties": {
                            "virtualNetwork": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks', 'kubernetes-the-hard-way')]"
                            },
                            "ipAddress": "[concat('10.240.0.1', copyIndex('loadBalancerBackendAddresses'))]"
                        }
                    }
                }
            ]
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/virtualNetworks', 'kubernetes-the-hard-way')]",
            "[resourceId('Microsoft.Network/loadBalancers', 'kubeapi-external')]"
        ]
    }]
}
